# habit-tracker

./: .gitignore  Dockerfile  Makefile  README.md  daysumuray.md  docker-compose.yml  habits.http  pyproject.toml  requirements.txt  streak.md
.github/workflows/: ci.yml
app/: database.py  dependencies.py  main.py  models.py  schemas.py
app/cli/: cli.py
app/core/: __init__.py  database.py  db_dependencies.py
app/crud/: base.py
app/models/: __init__.py  habit.py  record.py
app/routes/: __init__.py  calendar.py  day_summary.py  habits.py  records.py
app/schemas/: common.py  habits_schema.py  records_schema.py
app/services/: calendar_service.py  crud.py  day_summary_service.py  habit_crud.py  habit_service.py  record_crud.py  record_service.py
app/static/: style.css
app/templates/: index.html  koko.html  vectal.html
cli/: Dockerfile  habits_cli.py  requirements.txt
docker/: Dockerfile  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/components/: App.vue.old  HabitCalendar.vue  HabitList.vue  HabitProgress.vue
infra/: Dockerfile  docker-compose.yml
infra/nginx/: moda_esfumaçando.html
infra/nginx/conf/: default.conf
nginx/: epa.html  index.html  style.css  teste.html
tests/: TESTS.md  conftest.py  test_habits.py  test_records.py
